Added a test - runs but has warnings, result is FAIL.